Add jvm option '--add-opens' to allow deep reflection (for guice/cglib)